syntax = "proto3";

package api.yyets.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "YYeTsBot-Go/api/yyets/v1;v1";
option java_multiple_files = true;
option java_package = "api.yyets.v1";

service Comment {
	rpc CreateComment (CreateCommentRequest) returns (CreateCommentReply);
	rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentReply);
	rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentReply);
	rpc GetComment (GetCommentRequest) returns (GetCommentReply);
	rpc ListComment (ListCommentRequest) returns (ListCommentReply){
		option (google.api.http) = {
			get: "/api/comment"
		};
	};
	rpc ListLatestComment (ListLatestCommentRequest) returns (ListLatestCommentReply){
		option (google.api.http) = {
			get: "/api/comment/newest"
		};
	};
}

message CreateCommentRequest {}
message CreateCommentReply {}

message UpdateCommentRequest {}
message UpdateCommentReply {}

message DeleteCommentRequest {}
message DeleteCommentReply {}

message GetCommentRequest {}
message GetCommentReply {}

message ListCommentRequest {
	int64 resource_id = 1 [(validate.rules).int64 = {gt:0}];
	int64 size = 2 [(validate.rules).int64 = {gt:0, lte: 120}];
	int64 page = 3 [(validate.rules).int64 = {gt:0}];
	string sort = 4 [(validate.rules).string = {in: "newest", in: "oldest"}];
}
message ListCommentReply {
	int64 count = 1;
	repeated CommentItem data = 2;
	int64 resource_id = 3;
}

message ListLatestCommentRequest {
	int64 size = 1 [(validate.rules).int64 = {gt:0, lte: 120}];
}
message ListLatestCommentReply {
	int64 count = 1;
	repeated CommentItem data = 2;
}

message CommentItem {
	string username = 1;
	string date = 2;
	string browser = 3;
	string content = 4;
	int64 resource_id = 5;
	string type = 6;
	string id = 7;
	repeated string  group = 8;
	bool hasAvatar = 9;
	string cnname = 10;
}